<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Programming For Beginners</string>
    <string name="welcome_buddy">Welcome Buddy!</string>
    <string name="action_settings">Settings</string>
    <string name="button_resume">Resume</string>
    <string name="button_new">New</string>
    <string name="example">How it works!</string>

    <color name="background">#EBF4FA</color>
    <color name="text_color">#aee442</color>
    <color name="error_color">#ff0000</color>
    <color name="no_error_color">#000000</color>
    <color name="btntext_color">#aee442</color>
    <color name="newbtntext_color">#aee442</color>

    <string name="introduction">Introduct android:layout_gravity="center"ion</string>
    <string name="press_me">Press Me</string>
    <string name="introduction_text">This application is targeted to all the people new to programming language. This will help in effective logic building and also make you familiar to the concepts of programming. </string>
    <string name="instructions">Instructions</string>
    <string name="instructionset">fd - To move forward.</string>
    <string name="get_started">Get Started</string>
    <string name="inputarea">This is your workspace</string>
    <string name="button_excute">Execute</string>
    <string name="textView_errors">Errors</string>
    <string name="title_activity_workspace">Programming For Beginners</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="title_activity_how_it_works">Programming For Beginners</string>
	<string name="ex">Example</string>
</resources>
