<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="32dp"
        android:text="@string/introduction"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_x="-2dp"
        android:layout_y="415dp"
        android:text="@string/press_me" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="298dp"
        android:layout_height="260dp"
        android:layout_x="10dp"
        android:layout_y="112dp"
        android:text="@string/introduction_text"
        android:textColor="@color/text_color"

        android:textAppearance="?android:attr/textAppearanceMedium" />

</AbsoluteLayout>
