<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.programmingforbegg.MainActivity"
    tools:ignore="MergeRootFrame" 
    android:background="@drawable/back2"
    android:orientation="vertical"
     >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/welcome_buddy"
        android:textAlignment="center"
		android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold" />
	
    <Button
        android:id="@+id/example_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textColor="@color/btntext_color"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:drawablePadding="50dp"/>

    
    
    <Button
        android:id="@+id/new_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_new"
        android:textColor="@color/newbtntext_color" />
  
</LinearLayout>

